# nutzlock-tracker

./: .gitignore  .mcp.json  AGENTS.md  README.md  skills-lock.json
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.interface-design/: system.md
client/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/docs/: DESIGN_GUIDELINES.md  SKILL.md
client/src/: App.test.tsx  App.tsx  index.css  main.tsx
client/src/api/: client.test.ts  client.ts  health.test.ts  health.ts  rooms.ts  runs.test.ts  runs.ts  tracker.ts
client/src/components/: AppProviders.tsx
docs/: AI_AGENT_SETUP.md  ARCHITECTURE.md  Anforderungsbogen_Nuzlocke_Soullink_Tracker (1).md  ENTITIES.md  WIREFRAMES.md
server/: .env.example  AGENTS.md  pyproject.toml  start-dev.ps1
server/docs/: BACKEND_GUIDELINES.md
server/src/nutzlock_tracker/: __init__.py  config.py  database.py  main.py  model_utils.py
server/src/nutzlock_tracker/encounters/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/nutzlock_tracker/health/: __init__.py  router.py  schemas.py
server/src/nutzlock_tracker/pokemon/: __init__.py  models.py  schemas.py
server/src/nutzlock_tracker/rooms/: __init__.py  models.py  router.py  schemas.py  service.py
server/src/nutzlock_tracker/rules/: __init__.py  constants.py  models.py  service.py
server/src/nutzlock_tracker/runs/: __init__.py  models.py  router.py  schemas.py  service.py
server/tests/: test_encounters.py  test_health.py  test_rooms.py  test_runs.py
(+39 files in other folders)
