[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutzlock-tracker-api"
version = "0.1.0"
description = "FastAPI backend for the Nuzlocke and Soullink tracker."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nutzlock_tracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

